logout functionality added, navbar alignment fix and primary color variable declared

--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -1,7 +1,4 @@
-.navbar_wrapper {
-    display: flex;
-    justify-content: end;
-    padding: 5px 0;
+.navbar_holder {
     box-shadow: 0px 0px 10px #000;
     position: fixed;
     top: 0;
@@ -9,10 +6,18 @@
     overflow: hidden;
     background-color: white;
 
-    .navbar_right {
+    .navbar_wrapper {
         display: flex;
-        align-items: center;
-        gap: 10px;
+        justify-content: end;
+        padding: 5px;
+        width: 100%;
+        max-width: 1300px;
+
+        .navbar_right {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
     }
 }
 
