--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,5 @@
+$primary-color: #E95420;
+
 // Extra small tablets and large smartphones (landscape view)
 $screen-xsm-min: 0px;
 
